--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
   <script>
-    var G = 6.6740831*(10 ** -11)
-    var M = 5.972 * (10 ** 24)
+    // var G = 6.6740831*(10 ** -11)
+    // var M = 5.972 * (10 ** 24)
 
     function tabChange(id) {
       document.getElementById("tab1").style.display = id == "tab1"? "block": "none";
@@ -55,16 +55,18 @@
         <img src="images/Delta_V_Heavy_KSP.png" alt="Delva V Heavy in KSP">
       </div>
 
-      <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
-        now the largest capacity rocket in operation. At $400 million per launch,
-        the Delta V heavy can get a payload of 28,790kg to LEO (Low Earth Orbit),
-        using 628,420kg of propellant in the process.</p>
-      <p>Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
-        to fuel both stages, but unlike the real rocket, the replica includes fuel
-        pumps leading from the side boosters to the center core. The Falcon Heavy
-        will feature simlar fuel crossfeed, but seeing as this is much harder to
-        implement in real life, only 6/9 engines in the center core will be feuled
-        from the side boosters.</p>
+      <div>
+        <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
+          now the largest capacity rocket in operation. At $400 million per launch,
+          the Delta V heavy can get a payload of 28,790kg to LEO (Low Earth Orbit),
+          using 628,420kg of propellant in the process.</p>
+        <p>Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
+          to fuel both stages, but unlike the real rocket, the replica includes fuel
+          pumps leading from the side boosters to the center core. The Falcon Heavy
+          will feature simlar fuel crossfeed, but seeing as this is much harder to
+          implement in real life, only 6/9 engines in the center core will be feuled
+          from the side boosters.</p>
+      <div>
     </article>
 
     <article>
@@ -75,14 +77,16 @@
         <img src="images/Space_Shuttle_KSP.png" alt="Space Shuttle in KSP">
       </div>
 
-      <p>The Space Shuttle is one of the most recognisable rockets in history, this
-        particular image is of STS-120, flown by Space Shuttle Discorvery on 23/10/2007,
-        carrying the Harmoney module (node 2) to the ISS.</p>
-      <p>In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
-        fueled by LH2/LOX, and two solid rocket boosteres attached on either
-        side of the large orange tank. The KSP replica uses a white tank, just like
-        the first two Shuttle missions. The white paint was removed after STS-2,
-        increasing the payload capacity.</p>
+      <div>
+        <p>The Space Shuttle is one of the most recognisable rockets in history, this
+          particular image is of STS-120, flown by Space Shuttle Discorvery on 23/10/2007,
+          carrying the Harmoney module (node 2) to the ISS.</p>
+        <p>In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
+          fueled by LH2/LOX, and two solid rocket boosteres attached on either
+          side of the large orange tank. The KSP replica uses a white tank, just like
+          the first two Shuttle missions. The white paint was removed after STS-2,
+          increasing the payload capacity.</p>
+      </div>
     </article>
 
     <article>
@@ -93,9 +97,11 @@
         <img src="images/Space_Shuttle_Orbiter_KSP.png" alt="Space Shuttle Orbiter in KSP">
       </div>
 
-      <p>On the left is a picture of the Space Shuttle Atlantis shortly before landing
-        at the KSC following STS-122. On the right is the KSP replica, firing it's
-        OME (Orbital Maneuvering Engines) as is prepares for its journey back home.</p>
+      <div>
+        <p>On the left is a picture of the Space Shuttle Atlantis shortly before landing
+          at the KSC following STS-122. On the right is the KSP replica, firing it's
+          OME (Orbital Maneuvering Engines) as is prepares for its journey back home.</p>
+      </div>
     </article>
 
     <article>
@@ -106,15 +112,17 @@
         <img src="images/Atlas_V_551_KSP.png" alt="Atlas V 551 in KSP">
       </div>
 
-      <p>The Atlas V is a 2 stage rocket operated by ULA (United Launch Alliance).
-        The first stage uses a single RD-180 engine, fueled by RP-1/LOX, while the
-        second stage uses LH2/LOX to fuel its RL10 engine.</p>
-      <p>Perhaps what is most interesting about the Atlas V is the configuration
-        of its SRBs (Solid Rocket Boosters). As seen
-        <a href="https://en.wikipedia.org/wiki/Atlas_V#/media/File:Atlas_V_family.png">here</a>,
-        there SRBs are asymmetrical, meaning the thrust does not line up with
-        the center of mass. This would cause the rocket to rotate, but the engine
-        on the first stage can gimbal (pivot) to cancel out this rotation.</p>
+      <div>
+        <p>The Atlas V is a 2 stage rocket operated by ULA (United Launch Alliance).
+          The first stage uses a single RD-180 engine, fueled by RP-1/LOX, while the
+          second stage uses LH2/LOX to fuel its RL10 engine.</p>
+        <p>Perhaps what is most interesting about the Atlas V is the configuration
+          of its SRBs (Solid Rocket Boosters). As seen
+          <a href="https://en.wikipedia.org/wiki/Atlas_V#/media/File:Atlas_V_family.png">here</a>,
+          there SRBs are asymmetrical, meaning the thrust does not line up with
+          the center of mass. This would cause the rocket to rotate, but the engine
+          on the first stage can gimbal (pivot) to cancel out this rotation.</p>
+      </div>
     </article>
 
     <article>
@@ -125,14 +133,16 @@
         <img src="images/Saturn_1B_KSP.png" alt="Saturn 1B in KSP">
       </div>
 
-      <p>The Saturn 1B played an important part in getting the first men on the moon.
-        It's resemblance to the Saturn V is no coincident, much of the hardware used
-        on the Saturn V was tested on the Saturn 1B, such as the CSM (Command/Service Module),
-        the LM (Lunar Module), and the S-IVB upper stage. It flew the Apollo 5 mission,
-        and sent crew to Skylab, an old America space station.</p>
-      <p>Just the the real thing, the KSP replica has 8 engines in its first stage,
-        burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
-        stage. The replica can be seen shortly after lift off, taking the CSM to orbit.</p>
+      <div>
+        <p>The Saturn 1B played an important part in getting the first men on the moon.
+          It's resemblance to the Saturn V is no coincident, much of the hardware used
+          on the Saturn V was tested on the Saturn 1B, such as the CSM (Command/Service Module),
+          the LM (Lunar Module), and the S-IVB upper stage. It flew the Apollo 5 mission,
+          and sent crew to Skylab, an old America space station.</p>
+        <p>Just the the real thing, the KSP replica has 8 engines in its first stage,
+          burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
+          stage. The replica can be seen shortly after lift off, taking the CSM to orbit.</p>
+      </div>
     </article>
   </section>
 
