added orbital period, or was that the last one?

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <div class="orbit">
         <label for="OV">Orbit height: </label>
         <input id="OV" onchange="orbitInfo();" onkeyup="orbitInfo();" type="number" value="400000" min="100000" step="10000">
-        <p id="OVresult">Velocity: 7672 m/s<br>Orbital Period: 92</p>
+        <p id="OVresult">Velocity: 7672 m/s<br>Orbital Period: 92 minutes</p>
       </div>
 
       <p>The ISS orbits at an altitude of 100km, with a velocity of 7672 m/s and
