--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <nav>
     <ul class="navbar">
       <li><a onclick="tabChange('tab1')">Home</a></li>
-      <li><a onclick="tabChange('tab2')">Page 1</a></li>
-      <li><a onclick="tabChange('tab3')">Page 2</a></li>
+      <li><a onclick="tabChange('tab2')">KSP</a></li>
+      <li><a onclick="tabChange('tab3')">Other</a></li>
     </ul>
 
     <div id="navline"></div>
