--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         graduates in employment and that the course covers many aspects of
         programming that I've been struggling to study on my own. Attending
         the course will give me a structure to work with that I have
-        struggled to create independently. Having the task of creating this
+        found hard to create independently. Having the task of creating this
         website has been very helpful in my studying of HTML and CSS.
       </p>
     </article>
@@ -68,7 +68,7 @@
         for mobile and scale up from there using media queries to make the
         site responsive.</p>
 
-      <p>This responsive design can be seen mainly on page 2 of the site. The content
+      <p>This responsive design can be seen mainly on the 'KSP tab' of the site. The content
         flows as the page is re-sized allowing it to look good on all devices.
         The design of the site is simple. The content for each tab corresponds
         to a <code>&lt;section&gt;</code> element. Contained within each
@@ -87,9 +87,9 @@
         in order to make the tabs function. I also added a JavaScript calculator
         on the third tab and experimented with some responsive styling on that.</p>
 
-      <p>I used the <code>&lt;-webkit-scrollbar&gt;</code> webkit specific
+      <p>I used the <code>-webkit-scrollbar</code> webkit specific
         CSS element to test out the browser specific style elements. In Chrome
-        the scrollbar is in keeping with the dark (with a bit of blue) theme.</p>
+        the scrollbar design is in keeping with the dark (with a bit of blue) theme.</p>
 
     </article>
 
@@ -107,7 +107,10 @@
           I have yet to create a kata and am struggling for an idea.</li>
         <li><a target="_blank" href="https://www.freecodecamp.org/fccaf536742-18bf-4be9-89ed-7f86510ea5e9">FreeCodeCamp</a>
            - My freecodecamp account; I have made very little use of
-          this site as I had already begun to study through Udacity and CodeAcademy.</li>
+          this site as I had already begun to study through Udacity and CodeAcademy
+          before coming across Founders and Coders. I have made a lot
+          of use of the <a href="https://developer.mozilla.org/en-US/">Mozilla web docs</a>
+          as a reference site.</li>
       </ul>
     </article>
   </section>
@@ -120,7 +123,7 @@
         then in KSP, trying to make them as realsic as possible, from the engine
         and stage count, to the propellant used and the overall design of the rocket.</p>
       <p>Each section is about a different rocket, and has two pictures. The picture
-        of the left is of the real rocket, and the one on the right is the KSP replica.
+        of the left is of the real rocket, and the one on the right is my KSP replica.
         There is also some info about the rocket on the right or under the picures,
         depending on the size of your brouser.</p>
     </article>
@@ -135,10 +138,10 @@
 
       <div>
         <p>The Space Shuttle is one of the most recognisable rockets in history, this
-          particular image is of STS-120, flown by Space Shuttle Discorvery on 23/10/2007,
-          carrying the Harmoney module (node 2) to the ISS.</p>
-        <p>In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
-          fueled by LH2/LOX, and two solid rocket boosteres attached on either
+          particular image is of STS-120, flown by Space Shuttle Discovery on 23/10/2007,
+          carrying the Harmony module (node 2) to the ISS.</p>
+        <p>In order to get Discovery to the ISS, the Space Shuttle used 3 RS-25 engines
+          fueled by LH2/LOX, and two solid rocket boosters attached on either
           side of the large orange tank. The KSP replica uses a white tank, just like
           the first two Shuttle missions. The white paint was removed after STS-2,
           increasing the payload capacity.</p>
@@ -213,12 +216,12 @@
 
       <div>
         <p>The Saturn 1B played an important part in getting the first men on the moon.
-          It's resemblance to the Saturn V is no coincident, much of the hardware used
+          It's resemblance to the Saturn V is no coincident; much of the hardware used
           on the Saturn V was tested on the Saturn 1B, such as the CSM (Command/Service Module),
-          the LM (Lunar Module), and the S-IVB upper stage. It flew the Apollo 5 mission,
+          the LM (Lunar Module) and the S-IVB upper stage. It flew the Apollo 5 mission,
           and sent crew to Skylab, an old America space station.</p>
-        <p>Just the the real thing, the KSP replica has 8 engines in its first stage,
-          burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
+        <p>Just the the real thing, the KSP replica has 8 engines in its first stage
+          burning RP-1/LOX and a single engine burning LH2/LOX in the S-IVB upper
           stage. The replica can be seen shortly after lift off, taking the CSM to orbit.</p>
       </div>
     </article>
@@ -229,7 +232,9 @@
       <h1>Orbital Velocity Calculator</h1>
 
       <p>Enter your orbital height (in meters) in the box below, and the orbital
-        velocity will be displayed.</p>
+        velocity will be displayed. <em>Orbital velocity</em> is the speed an object
+        needs to be travelling at to maintain its altitude above the earth with
+        no propulsion.</p>
 
       <div class="orbit">
         <label for="OV">Orbit height: </label>
@@ -244,7 +249,33 @@
     </article>
 
     <article>
+      <h1>Other programming work</h1>
+        <p>I have put a few programs up on Github that I have developed as I've been
+          teaching myself since leaving school.</p>
 
+        <p><strong>kRPC</strong> is mod for Kerbal Space Program that allows you to control your
+          rockets using languages such as Python. My Gravity Turn script
+          helps me to launch a SpaceX like rocket. It controls the launch and
+          the second stage after separation, allowing me to land the first stage.
+          Without this script I was unable to manage both stages manually and
+          would have to chose to lose one of them.</p>
+        <p>The BRF script launches and perfectly lands back on the ground
+          a Kerbal replica of <a target="_blank" href="https://en.wikipedia.org/wiki/BFR_(rocket)">
+            SpaceX's next generation rocket</a>.</p>
+        <p>The Kerbal scripts are in the
+          <a target="_blank" href="https://github.com/JoshKernick/kRPC">kRPC</a>
+          repository on my Github.</p>
+
+        <p>My <a target="_blank" href="https://github.com/JoshKernick/Projects">Projects</a>
+          repository contains some Python code that I have written. I wrote a Pong
+          and Snake game using object orientation to learn about that programming
+          style. I had previously adapted someone else's Snake game to play itself
+          and this was in a procedural style. I found that object orientation made
+          the programme easier to think about because it contained related things
+          together.</p>
+        <p>The Falling game I wrote for my sister and the Eight queens problem
+          was something my Dad asked if I could do. I managed to solve the
+          Eight queens problem in just one line of code.</p>
     </article>
   </section>
 
